--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jsdom": "^24.0.0",
     "typescript": "latest"
   },
-  "name": "planning-poker",
+  "name": "pointing-poker",
   "version": "1.0.0",
   "main": "./dist/index.js",
   "type": "module",
@@ -53,8 +53,8 @@
   },
   "dependencies": {
     "@ncpa0cpl/vanilla-jsx": "^0.0.1-alpha.7",
-    "adwavecss": "^0.0.9",
-    "adwaveui": "^0.0.2",
+    "adwavecss": "^0.0.10",
+    "adwaveui": "^0.0.3",
     "axios": "^1.6.4",
     "clsx": "^2.1.0",
     "dilswer": "^2.1.1",
