--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "jsdom-global": "^3.0.2",
     "luxon": "^3.4.4",
     "marked": "^11.1.1",
-    "node-persist": "^3.1.0",
+    "node-persist": "3.1.0",
     "reflect-metadata": "^0.2.1",
     "uuid": "^9.0.1"
   }
