--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "devDependencies": {
     "@ncpa0cpl/nodepack": "2.3.1",
-    "@snowpack/plugin-sass": "^1.4.0",
-    "@swc/core": "^1.2.205",
     "@types/bun": "^1.0.1",
     "@types/escape-html": "^1.0.4",
-    "@types/express": "^4.17.13",
-    "@types/express-ws": "^3.0.4",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsdom": "^21.1.6",
     "@types/luxon": "^3.3.8",
@@ -19,7 +15,7 @@
     "dprint": "^0.45.0",
     "esbuild": "^0.19.11",
     "eslint": "^8.56.0",
-    "git-hook-tasks": "ncpa0cpl/git-hook-tasks",
+    "git-hook-tasks": "git+https://github.com/ncpa0cpl/git-hook-tasks",
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
     "typescript": "latest"
