--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "crc-32": "^1.2.2",
     "dprint": "^0.45.0",
     "esbuild": "^0.19.11",
     "eslint": "^8.56.0",
