--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   },
   "dependencies": {
     "@ncpa0cpl/vanilla-jsx": "^0.0.1-alpha.31",
-    "adwavecss": "^0.0.13",
-    "adwaveui": "^0.0.6",
+    "@ncpa0cpl/vrouter": "^0.0.3",
+    "adwavecss": "^0.1.1",
+    "adwaveui": "^0.0.11",
     "axios": "^1.6.4",
     "dilswer": "^2.1.1",
     "escape-html": "^1.0.3",
