--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "dependencies": {
     "@ncpa0cpl/vanilla-jsx": "^0.0.1-alpha.31",
     "@ncpa0cpl/vrouter": "^0.0.3",
+    "@sentry/browser": "^8.35.0",
     "adwavecss": "^0.1.1",
     "adwaveui": "^0.0.11",
-    "axios": "^1.6.4",
     "dilswer": "^2.1.1",
     "escape-html": "^1.0.3",
     "http-status-codes": "^2.3.0",
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@ncpa0cpl/nodepack": "2.3.3",
-    "@types/bun": "^1.0.1",
+    "@types/bun": "^1.1.11",
     "@types/escape-html": "^1.0.4",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsdom": "^21.1.6",
@@ -53,12 +53,10 @@
     "@types/node-persist": "^3.1.8",
     "@types/reflect-metadata": "^0.1.0",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
     "crc-32": "^1.2.2",
+    "dedent": "^1.5.3",
     "dprint": "^0.45.0",
     "esbuild": "^0.19.11",
-    "eslint": "^8.56.0",
     "git-hook-tasks": "git+https://github.com/ncpa0cpl/git-hook-tasks",
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
