--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "ES2022",
+    "module": "ESNext",
     "moduleResolution": "Node",
     "jsx": "react-jsx",
     "jsxImportSource": "@ncpa0cpl/vanilla-jsx",
