fix: graph handling for local time changes, graph left legend brakpoints

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -5,7 +5,7 @@
     },
     "TypeScript": {
       "language_servers": ["!eslint", "vtsls"],
-      "format_on_save": {
+      "formatter": {
         "external": {
           "command": "bun",
           "arguments": ["run", "dprint", "fmt", "--stdin", "{buffer_path}"]
@@ -14,7 +14,7 @@
     },
     "TSX": {
       "language_servers": ["!eslint", "vtsls"],
-      "format_on_save": {
+      "formatter": {
         "external": {
           "command": "bun",
           "arguments": ["run", "dprint", "fmt", "--stdin", "{buffer_path}"]
@@ -22,7 +22,7 @@
       }
     },
     "CSS": {
-      "format_on_save": {
+      "formatter": {
         "external": {
           "command": "bun",
           "arguments": ["run", "dprint", "fmt", "--stdin", "{buffer_path}"]
@@ -30,7 +30,7 @@
       }
     },
     "JSON": {
-      "format_on_save": {
+      "formatter": {
         "external": {
           "command": "bun",
           "arguments": ["run", "dprint", "fmt", "--stdin", "{buffer_path}"]
